DEP: update pom.xml (bump hibernate)