@@ -42,7 +42,8 @@
 				<configuration> <!-- Compile JAVA 18 compatible bytecode -->
 					<source>17</source>
 					<target>17</target>
-				</configuration>
+                    <compilerArgs>--enable-preview</compilerArgs>
+                </configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -108,7 +109,7 @@
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-core</artifactId>
-			<version>5.6.9.Final</version> <!-- JPA 3.0-->
+			<version>6.1.0.Final</version> <!-- JPA 3.0-->
 		</dependency>
 		<dependency>
 			<groupId>org.mockito</groupId>
